Fixed spacing in navigation icons

--- a/web/assets/css/partials/_header.scss
+++ b/web/assets/css/partials/_header.scss
@@ -17,7 +17,7 @@ body {
                 float: left;
                 display: none;
                 margin-right: 15px;
-                padding-left: 10px;
+                padding-left: 17px;
 
                 li {
                     line-height: $line-height;
@@ -124,7 +124,7 @@ body {
                                 width: 100%;
 
                                 a {
-                                    padding: 15px 15px 15px 25px;
+                                    padding: 15px;
                                 }
                             }
                         }
